--- a/config/staging.yaml
+++ b/config/staging.yaml
@@ -1,5 +1,5 @@
 logger:
-  level: "TRACE"
+  level: "DEBUG"
   # Backtrace: Traces back to the first frame.
   # Only enable that in very rare circumstances.
   backtrace: false
@@ -30,6 +30,7 @@ utilities:
 
 eew:
   target: "iedred" # svir or iedred.
+  only_dmdata: true # FIXME: Debugging
 
 dmdata:
   enabled: true
