--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,7 @@ pillow~=9.1.0
 sentry-sdk~=1.29.2
 httpx~=0.23.3
 pytest~=7.4.0
+fastapi-sqlalchemy~=0.2.1
+alembic~=1.11.2
+asyncpg~=0.28.0
+sqlalchemy~=2.0.20
